<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="StringEscaping">Iron Horse</string>
    <string name="store_closed_text">Now Store Closed</string>
    <string name="welcome">Welcome</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="msg_privacy_terms">I have read and agree to the Privacy Policy and Terms &amp; Conditions.</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="cart">Cart</string>
    <string name="change_pass">Change Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="recover_pass">Continue</string>
    <string name="new_pass">New Password</string>
    <string name="msg_reset_pass_success">Your password reset successfully, please login with your password.</string>
    <string name="title_category">Category</string>
    <string name="title_fav">Wishlist</string>
    <string name="title_cart">More</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="via">Via&#160;</string>
    <string name="cod">C.O.D.</string>
    <string name="faq">FAQ</string>
    <string name="work">Work</string>
    <string name="logout">LogOut</string>
    <string name="shopbycategory">Shop by Category</string>
    <string name="search">Search products..</string>
    <string name="no_category_found">No Category Found</string>
    <string name="view_all">View All</string>
    <string name="login_">Login</string>
    <string name="password_">Password</string>
    <string name="verify">Verify</string>
    <string name="mail_send_msg">We will send you an OTP on this email to verify. </string>
    <string name="mobile_send_msg">We will send you an OTP on this mobile number to verify. </string>
    <string name="please_type_verification_code_sent_to">Please Enter OTP sent via SMS on </string>
    <string name="personal_info">Personal Info</string>
    <string name="not_registered">Not Registered yet? Click Here to SignUp</string>
    <string name="forgottext">Forgot password ?</string>
    <string name="forgot_message_hint">Enter registered mobile number</string>
    <string name="changepswtext">Change Password </string>
    <string name="old_pass">Old Password </string>
    <string name="reset_pass_text">Reset Your Password</string>
    <string name="plus_sign">+</string>
    <string name="changepsw">Change Password ?</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="update">Update</string>
    <string name="confirm_order_amt">Confirm Order Amount</string>
    <string name="ortext"><u>OR</u></string>
    <string name="profile">Profile</string>
    <string name="delivery_boy">Delivery Boy</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile No</string>
    <string name="city">City</string>
    <string name="select_city">Select City</string>
    <string name="select_area">Select Area</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="pincode">Zip Code</string>
    <string name="code">00</string>
    <string name="dateofbirth">Date Of Birth(Optional)</string>
    <string name="is_login">Login ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="next">Next</string>
    <string name="otp">Enter OTP</string>
    <string name="deliverytime">Delivery Method</string>
    <string name="select_delivery_date">Select delivery day</string>
    <string name="verify_your_email">Verify Your Email </string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_data_found">NO DATA FOUND</string>
    <string name="more_variant"></string>
    <string name="fav_text">Save</string>
    <string name="share_text">Share</string>
    <string name="similarproduct">Similar</string>
    <string name="product_details">Product Details</string>
    <string name="quantity">Quantity</string>
    <string name="buynow">Go To Cart</string>
    <string name="relatedproducts">Related Products</string>
    <string name="view_more"><u>View More</u></string>
    <string name="msg_no_result">Sorry, no results found</string>
    <string name="msg_search_again">Please check the spelling or try a different word</string>
    <string name="no_fav_found">No Favourites Found</string>
    <string name="limit_alert">apologies, max product quantity limit reached.</string>
    <string name="no_item_cart">Cart is Empty</string>
    <string name="deleteproductmsg">Are you sure, you want to remove this product from cart ?</string>
    <string name="deleteproducttitle">Remove Product</string>
    <string name="stock_limit">Oops! Limited stock available. </string>
    <string name="kg_limit">Oops! Limited stock available. </string>
    <string name="total_amt">Subtotal</string>
    <string name="items">Items Amount :</string>
    <string name="promo_applied">PromoCode Discount :</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="delivery_charge1">Delivery Charge :</string>
    <string name="free">Free</string>
    <string name="cart_subtotal">Total</string>
    <string name="tax">Tax</string>
    <string name="discount">Discount</string>
    <string name="checkout">CHECKOUT</string>
    <string name="update_location">Update Location</string>
    <string name="Delivery_Address">Delivery Address</string>
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="current_location">Current Location</string>
    <string name="order_list">Order Summary</string>
    <string name="confirm">Confirm</string>
    <string name="proceed">Proceed</string>
    <string name="promo_code_msg">Have a Promo Code?</string>
    <string name="delivery_type_msg">Delivery Method</string>
    <string name="promo_code">Promo Code</string>
    <string name="apply">Apply</string>
    <string name="applied">Applied</string>
    <string name="selectcity">Please Select City</string>
    <string name="selectarea">Please Select Area</string>
    <string name="product_name">Product Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="noitem_incart">Your cart is empty</string>
    <string name="noitem_incart_msg">You have no items in your shopping cart.\nLets\'s go buy something!</string>
    <string name="shop_now">Shop Now</string>
    <string name="sort">Sortlist</string>
    <string name="filterby">Filter By</string>
    <string name="payment_mathod">Payment Method</string>
    <string name="cod_pay">Cash On Delivery</string>
    <string name="pay_u_pay">PayUMoney</string>
    <string name="paypal_pay">PayPal</string>
    <string name="insta_pay">Instamojo</string>
    <string name="razor_payment">RazorPay</string>
    <string name="razor_pay">RazorPay</string>
    <string name="pay_u">PayUMoney</string>
    <string name="paypal">PayPal</string>
    <string name="resend"><u>Resend</u></string>
    <string name="resend_cap">RE-SEND</string>
    <string name="not_receive_msg">Don\'t receive verify otp ?</string>
    <string name="verify_message">Verify your registered number and reset your password. </string>
    <string name="alert_register_num1">Mobile number is not registered on&#160;</string>
    <string name="alert_register_num2">. Please register to continue. Return to Log In screen and select Sign Up.</string>
    <string name="verify_alert_1">Mobile number already registered with&#160;</string>
    <string name="verify_alert_2">. You can sign into account using your credentials.</string>
    <string name="reset_alert_msg">Are you sure, you want to reset password?</string>
    <string name="msg_forget_otp">OTP sent to this mobile number</string>
    <string name="verify_your_mobile">Verify Your Mobile </string>
    <string name="onlinepaytype">payumoney</string>
    <string name="codpaytype">cod</string>
    <string name="orderplaced">Order Placed</string>
    <string name="order_placed1">Order Placed!</string>
    <string name="success_order">Your order has been successfully placed !</string>
    <string name="summary">View Order Details</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total">Total :&#160;</string>
    <string name="order_success">Order Successfully Placed</string>
    <string name="txn_cancel_msg">Are you sure you want to cancel the transaction?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mobile_">Mobile:&#160;</string>
    <string name="qty_1">Qty:&#160;</string>
    <string name="more_variants">More Variants</string>
    <string name="update_alert">Update Alert</string>
    <string name="up_location">Update Location</string>
    <string name="submit">Submit</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="my_location">My Location</string>
    <string name="offer_price">Offer Price:&#160;</string>
    <string name="mrp">M.R.P.:&#160;</string>
    <string name="you_save">You Save:&#160;</string>
    <string name="canceled_on">Order Cancelled On : &#160;</string>
    <string name="name_1">Name :&#160;</string>
    <string name="mobile_no_1">\nMobile No :&#160;</string>
    <string name="address_1">\nAddress :&#160;</string>
    <string name="total_">Total&#160;</string>
    <string name="_item_">&#160;Item&#160;</string>
    <string name="_items_">&#160;Items&#160;</string>
    <string name="total_balance">Total Balance:&#160;</string>
    <string name="total_points">Total Points:&#160;</string>
    <string name="noitem_intracker">You have not order yet</string>
    <string name="order_track">Track Order</string>
    <string name="ordered_id">Ordered Id:&#160;</string>
    <string name="order_date">Order Date:&#160;</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancel_item">Cancel Item</string>
    <string name="cancel">Cancel</string>
    <string name="no_track_msg">No Tracking Found..!!</string>
    <string name="return_order">Return Item</string>
    <string name="quantity_tracking">Qty:</string>
    <string name="view_details">View Details</string>
    <string name="order_placed">Order\nPlaced</string>
    <string name="processed">Order\nProcessed</string>
    <string name="shipped">Order\nShipped</string>
    <string name="delivered">Order\nDelivered</string>
    <string name="returned">Returned</string>
    <string name="other_details">Other Details</string>
    <string name="price_details">Price Detail</string>
    <string name="trackingstatus">Tracking Status on</string>
    <string name="order_status">Order Status</string>
    <string name="cancel_order_detail">Cancel Order ?</string>
    <string name="cancel_success">Cancelled Successfully</string>
    <string name="request_success">Request Sent Successfully</string>
    <string name="cancel_msg">Are you sure, you want to cancel this item ?</string>
    <string name="return_msg">Are you sure, you want to return this item ?</string>
    <string name="rate">Rate Us</string>
    <string name="notifications">Notifications</string>
    <string name="enter_name">Enter Name</string>
    <string name="sharapp">Share App</string>
    <string name="refere">Refer &amp; Earn</string>
    <string name="wallet_balance1">Wallet Balance :</string>
    <string name="final_total">Grand Total : </string>
    <string name="title_scan">Scan</string>
</resources>