<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_cart_new"
        android:title="@string/cart" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_bell_icon"
        android:title="@string/notifications" />

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_tracker"
            android:icon="@drawable/ic_trackorder__2_"
            android:title="@string/order_track" />

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/changePass"
            android:icon="@drawable/m_change"
            android:title="@string/change_pass" />

        <item
            android:id="@+id/refer"
            android:icon="@drawable/ic_refer_icon"
            android:title="@string/refere" />
    </group>


    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contact"
            android:icon="@drawable/ic_call_icon__3_"
            android:title="@string/contact" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_information_icon"
            android:title="@string/about" />
        <item
            android:id="@+id/menu_rate"
            android:icon="@drawable/ic_star"
            android:title="@string/rate" />
        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/ic_share_icon"
            android:title="@string/sharapp" />

    </group>


    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/faq"
            android:icon="@drawable/ic_faq_icon"
            android:title="@string/faq" />
        <item
            android:id="@+id/menu_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/menu_privacy"
            android:icon="@drawable/ic_privacy_icon"
            android:title="@string/privacy_policy" />

    </group>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/m_logout"
        android:title="@string/logout" />


</menu>