<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/menu_category"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/category"
        android:title="@string/title_category" />
    <item
        android:id="@+id/menu_fav"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/favourite"
        android:title="@string/title_fav" />

    <item
        android:id="@+id/menu_scan"
        android:checkable="true"
        android:enabled="true"
        android:visible="false"
        android:icon="@drawable/ic_scan__1_"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/menu_cart"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/more"
        android:title="@string/title_cart" />
</menu>