<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/card_shadow"
    android:layout_margin="@dimen/margin_10dp"
    android:orientation="vertical"
    app:layout_constraintCircleRadius="5dp"
    android:padding="@dimen/margin_10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_seminbold"
        android:gravity="center"
        android:padding="7dp"
        android:textSize="@dimen/dimen_16sp"
        android:text="@string/confirm_order_amt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimary" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lytAmt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/items"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp"/>

            <TextView
                android:id="@+id/tvItemTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lytDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delivery_charge1"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/tvDeliveryCharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTaxPercent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tax"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/tvTaxAmt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytPromo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPromoCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/promo_applied"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/tvPCAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytWallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wallet_balance1"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/dimen_14sp" />

            <TextView
                android:id="@+id/tvWallet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/dark_gray"
                style="@style/fontfamily_number"
                android:textSize="@dimen/dimen_14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lytFinalTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/final_total"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_seminbold"
                android:textSize="@dimen/dimen_16sp"/>

            <TextView
                android:id="@+id/tvFinalTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/black"
                style="@style/fontfamily_number_medium"
                android:textSize="@dimen/dimen_16sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/bg_border_gray"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textSize="@dimen/dimen_14sp"
            android:textColor="@color/gray"
            android:layout_marginRight="3dp"
            android:fontFamily="@font/poppins_seminbold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textAllCaps="true"
            android:layout_weight="1"
            android:background="@drawable/confirm_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/confirm"
            android:layout_marginLeft="3dp"
            android:textSize="@dimen/dimen_14sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_seminbold" />

    </LinearLayout>
</LinearLayout>